# xenops

./: LICENSE  README.md  __main__.py  flake.nix  pyproject.toml
tests/unit/: test_event_propagation.py  test_main.py
xenops/: __init__.py  __main__.py  main.py  window.py
xenops/event/: __init__.py
xenops/layout/: __init__.py
xenops/theme/: __init__.py
xenops/widget/: __init__.py  rect.py
