[project]
name = "xenops"
version = "0.0.1"
authors = [
  { name="Ohin \"Kazani\" Taylor", email="kazani@kazani.dev" },
]
description = "A GUI editor with Nix integration"
urls.homepage = "https://github.com/r2boyo25/xenops"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10"
dependencies = [] # TODO: list python dependencies
optional-dependencies.test = [
  "pytest",
  "coverage", "pytest-cov",
  "mypy", "pytest-mypy",
  "ruff",
]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[project.scripts]
xenops = "xenops.main:main"

[tool.pytest.ini_options]
addopts = "--mypy --cov --cov-report term-missing --doctest-modules"

[tool.coverage]
run.source = [ "xenops" ]
run.branch = true
report.exclude_lines = [
  "# pragma: no cover",
  "if __name__ == .__main__.:",
  "...  # overload",
]
report.fail_under = 100

[tool.mypy]
strict = true

[tool.ruff]
line-length = 79
preview = true
lint.select = [ "ALL" ]
lint.ignore = [
  "D105",  # undocumented-magic-method
  "D203",  # one-blank-line-before-class
  "D213",  # multi-line-summary-second-line
]
lint.per-file-ignores."tests/**" = [
  "INP001",  # implicit-namespace-package
  "S101",  # assert
]
lint.flake8-quotes.inline-quotes = "single"
lint.flake8-quotes.multiline-quotes = "single"
lint.flake8-copyright.notice-rgx = '# SPDX-FileCopyrightText: 2024 Ohin "Kazani" Taylor <kazani@kazani.dev>\n# SPDX-License-Identifier: MIT\n'
format.quote-style = "single"
format.preview = true